# text

./: .gitignore  DESIGN-SUGGESTION-1-CHAT.md  DESIGN-SUGGESTION-1.md  extract_chapters.py  extract_toc.py  legacy_extract_chapters.py  pdf_to_markdown.py  pyproject.toml  test.sh  text.code-workspace  tts.py
.cursor/rules/: project-context.mdc
extract_toc/: __init__.py  analysis.py  core.py  parsing.py  strategies.py  types.py
tests/: test_extract_toc.py
tests/test_ddia_rsma/: test_ddia_rsma.py
tests/test_lee_frumer_thesis_fibromyalgia/: lee-frumer-thesis-fibromyalgia.md  test_test_lee_frumer_thesis_fibromyalgia.py
tests/test_what_foundational_models_found/: test_extract_toc.py
