[project]
name = "text"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diskcache>=5.6.3",
    "pymupdf>=1.26.3",
    "requests>=2.32.4",
]

[project.optional-dependencies]
viz = [
    "numpy>=2.3.2",
    "plotly>=6.2.0",
    "scipy>=1.16.1",
]

[dependency-groups]
dev = [
    "pdbr>=0.9.2",
    "pytest>=8.4.1",
]
